Adding Blender hair bug #38928

Closed
opened 2014-03-03 06:14:02 +01:00 by johan tri handoyo · 12 comments

System Information
Ubuntu 12.04 64bit, NVIDIA GTX 650 Ti

Blender Version
Broken: Blender 2.69.11
Worked: (optional)

I was trying to add hair in particle edit mode. But the hair was not added on the assigned surface. It's just a mess and the hair scattered all over the place. I try a combination of modifier arrangement and the "use modifier stack" button. But the result was not satisfactory.

Please see the attachment for screen capture and .blend file example.
biru.blend
hair_error.jpg

Thank you

**System Information** Ubuntu 12.04 64bit, NVIDIA GTX 650 Ti **Blender Version** Broken: Blender 2.69.11 Worked: (optional) I was trying to add hair in particle edit mode. But the hair was not added on the assigned surface. It's just a mess and the hair scattered all over the place. I try a combination of modifier arrangement and the "use modifier stack" button. But the result was not satisfactory. Please see the attachment for screen capture and .blend file example. [biru.blend](https://archive.blender.org/developer/F79758/biru.blend) ![hair_error.jpg](https://archive.blender.org/developer/F79756/hair_error.jpg) Thank you

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @JohanTriHandoyo

Added subscriber: @JohanTriHandoyo

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1

Confirmed here as well, changing the order of the sub-surf modifer seems to affect it also.

Confirmed here as well, changing the order of the sub-surf modifer seems to affect it also.
Antonis Ryakiotakis self-assigned this 2014-03-04 19:41:32 +01:00

Some notes here:

Not sure if generative modifiers are currently properly supported for hair (comments in code seem to suggest they are not).

Apart from that there are some things that shout 'wrong' in the code such as line 3400 in particle_edit.c which will return the derived mesh face index in add_pars- [x].num while it's clear that the next function, psys_particle_dm_face_lookup, expects an argument in original mesh index range. I tried changing those but there is still a problem.

What did work was always taking the cached derivedmesh in 3370 but it worked for the wrong reasons and crashed om the particle mirroring functions.

Some notes here: Not sure if generative modifiers are currently properly supported for hair (comments in code seem to suggest they are not). Apart from that there are some things that shout 'wrong' in the code such as line 3400 in particle_edit.c which will return the derived mesh face index in add_pars- [x].num while it's clear that the next function, psys_particle_dm_face_lookup, expects an argument in original mesh index range. I tried changing those but there is still a problem. What did work was always taking the cached derivedmesh in 3370 but it worked for the wrong reasons and crashed om the particle mirroring functions.

OK, looks like indeed the "use modifier stack" option is the reason this breaks. If that is active, the final mesh is used as an emitter while the deformed mesh has been used to plant the hair. This leads to problems naturally. I will check the mirrored code since it misbehaves in the expected correct combination (minor fix + use modifier stack = off).

OK, looks like indeed the "use modifier stack" option is the reason this breaks. If that is active, the final mesh is used as an emitter while the deformed mesh has been used to plant the hair. This leads to problems naturally. I will check the mirrored code since it misbehaves in the expected correct combination (minor fix + use modifier stack = off).

Mirroring does not work on the same derivedmesh as the add brush does. This likely causes the misalignment between the particles This will be trickier to solve since the mirror code is common to all tools.

Sorry for the spam, just adding information here in case someone wants to take a look too.

Mirroring does not work on the same derivedmesh as the add brush does. This likely causes the misalignment between the particles This will be trickier to solve since the mirror code is common to all tools. Sorry for the spam, just adding information here in case someone wants to take a look too.

This issue was referenced by blender/blender-addons-contrib@eca6264ab0

This issue was referenced by blender/blender-addons-contrib@eca6264ab07d63b0875c019d83a2feb48df34fd8

This issue was referenced by eca6264ab0

This issue was referenced by eca6264ab07d63b0875c019d83a2feb48df34fd8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit eca6264ab0.

Closed by commit eca6264ab0.
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#38928
No description provided.